test: LottoReuslt를 리팩토링에따 테스트른코드 제거